<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:orientation="vertical">

        <!-- Todo: Set text properties in styles -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/youtube_streaming"
        android:layout_marginTop="29dp"
        android:layout_marginStart="16dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Todo: Add content description -->
                <ImageView
                    android:id="@+id/youtube_profile_pic"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_profile_user" />

                <TextView
                    android:id="@+id/youtube_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/signed_in_text"
                    app:layout_constraintTop_toTopOf="@id/youtube_profile_pic"
                    app:layout_constraintStart_toEndOf="@id/youtube_profile_pic" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/youtube_account_btn"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/dark_red"
                    android:text="@string/sign_in"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@id/youtube_name"
                    app:layout_constraintTop_toBottomOf="@id/youtube_name" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray"
                android:layout_marginVertical="8dp"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/upload_after_stream_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/upload_video_after_stream" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray"
                android:layout_marginVertical="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/streaming_quality">

                <!-- Todo: set text style for this -->
                <AutoCompleteTextView
                    android:id="@+id/filled_exposed_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:text="@string/storage" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/number_of_recordings" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/number_of_recordings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_recordings_list"
                android:layout_gravity="end"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/delete_all_recordings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:text="@string/delete_all_recordings"
            android:padding="16dp"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:textColor="@color/black"
            android:padding="16dp"/>

    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/terms_and_conditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/black"
            android:padding="16dp"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/app_version"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="16dp"
        android:textAlignment="center"
        android:text="@string/app_settings_info_label"/>

    </LinearLayout>

</ScrollView>