<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="?android:attr/dialogPreferredPadding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/dim_black"/>
    
    <EditText
        android:id="@+id/title"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recording_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy"
        android:textColor="@color/dim_black"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_privacy"
        >

        <!-- Todo: set text style for this -->
        <AutoCompleteTextView
            android:id="@+id/autoCompleteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@color/black"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>