<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/default_camera_toolbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/action_flash"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/timer"
        android:scaleType="fitCenter"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_flash_off_24" />

    <ImageButton
        android:id="@+id/action_timer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/timer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/action_flash"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_timer_24" />

    <Button
        android:id="@+id/five_timer"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:text="@string/five_timer"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@id/action_timer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/ten_timer"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="78dp"
        android:layout_height="48dp"
        android:text="@string/ten_timer"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@id/five_timer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/time_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/timer_display"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/action_settings"
        app:layout_constraintHorizontal_bias="0.996"
        app:layout_constraintStart_toStartOf="@+id/action_flash"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/action_settings"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginVertical="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_settings_24" />

</androidx.constraintlayout.widget.ConstraintLayout>