<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recording_camera_toolbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/action_flash"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/timer"
        android:scaleType="fitCenter"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_flash_off_24" />

    <ImageView
        android:id="@+id/recording_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        android:contentDescription="@string/recording_indicator"
        app:layout_constraintBottom_toBottomOf="@id/stopwatch"
        app:layout_constraintEnd_toStartOf="@id/stopwatch"
        app:layout_constraintTop_toTopOf="@id/stopwatch"
        app:srcCompat="@drawable/ic_baseline_fiber_manual_record_24" />

    <TextView
        android:id="@+id/stopwatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_duration"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>