<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recordings_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutAnimation="@anim/layout_animation"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/no_recordings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/no_recordings_description"
                android:src="@drawable/no_recordings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/titleText"
                android:text="@string/no_recordings_title"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/secondaryText"
                android:text="@string/no_recordings_message" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>